--- a/package.json
+++ b/package.json
@@ -5,15 +5,14 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "postbuild": "next-on-netlify",
     "start": "next start",
     "lint": "next lint",
     "deploy:static": "next build && next export"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^4.27.1",
     "disqus-react": "^1.1.4",
     "next": "12.3.1",
-    "next-on-netlify": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark": "^14.0.2",
