--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy:static": "next build && next export"
+    "deploy:static": "next build && next export",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@netlify/plugin-nextjs": "^4.27.1",
@@ -20,11 +22,18 @@
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.18.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.2.0",
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
     "@types/styled-components": "^5.1.26",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
+    "jest": "^29.2.2",
+    "jest-environment-jsdom": "^29.2.2",
+    "jest-styled-components": "^7.1.1",
     "typescript": "4.8.4"
   }
 }
